--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <div class="short">
      <p> Hey, hello. </p>
      <p> My name is Tom Hutchinson. </p>
-     <p class="last"> I'm currently looking for work 🖥</p>
+     <p class="last"> I'm available for remote work 🖥</p>
      <ul>
-      <li> Short term contracts using Clojure or Ethereum </li>
-      <li> Longer term contracts preferably using both! </li>
+      <li> Short or long term contracts</li>
+      <li> Preferably using Clojure or Ethereum </li>
      </ul>
      <p> Why not <a href="mailto:mail@tomisme.com"> email me</a>?</p>
 
