--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
   <body>
    <div class="long">
     <div class="short">
-     <p> Hey, hello. </p>
-     <p> My name is Tom Hutchinson. </p>
+     <p> Hello, my name is Tom Hutchinson. </p>
      <p class="last"> I'm available for remote work 🖥</p>
      <ul>
       <li> Short or long term contracts</li>
