--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
      <p class="last"> I'm available for remote work 🖥</p>
      <ul>
       <li> Short or long term contracts</li>
-      <li> Preferably using Clojure or Ethereum </li>
+      <li> Preferably front-end work using Clojure(script) and/or Ethereum </li>
      </ul>
      <p> Why not <a href="mailto:mail@tomisme.com"> email me</a>?</p>
 
