--- a/index.html
+++ b/index.html
@@ -39,14 +39,9 @@
    <div class="long">
     <div class="short">
      <p> Hello, my name is Tom Hutchinson. </p>
-     <p class="last"> I'm available for remote work 🖥</p>
-     <ul>
-      <li> Short or long term contracts</li>
-      <li> Preferably front-end work using Clojure(script) and/or Ethereum </li>
-     </ul>
      <p> Why not <a href="mailto:mail@tomisme.com"> email me</a>?</p>
 
-     <p class="last"> Other possible discussion topics: </p>
+     <p class="last"> Possible discussion topics: </p>
      <ul>
        <li> Making things for the Web </li>
        <li> Teaching </li>
