change twitter username

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
        <a href="https://github.com/tomisme" target="_blank">
          <img src="images/github.png">
        </a>
-       <a href="https://twitter.com/roeinyourboat" target="_blank">
+       <a href="https://twitter.com/emojinos" target="_blank">
          <img src="images/twitter.png">
        </a>
      </div>
